--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,5 +8,6 @@
             <a href="{{ site.baseurl }}about">About </a>
         {% endif %}
     {% endif %}
+    <a href="{{ site.baseurl }}cv">Resume </a>
     <a class="cta" href="{{ site.baseurl }}feed.xml">Subscribe</a>
 </nav>
